obsidian.css
:root
{
    --font-size-normal:              18px;
    --font-size-code:                15px;
    --font-size-side-dock:           15px;
    --font-size-side-dock-title:     18px;
    --font-size-status-bar:          15px;
    --font-size-h1:                  33px;
    --font-size-h2:                  25px;
    --font-size-h3:                  21px;
    --font-size-h4:                  20px;
    --font-size-h5:                  19px;
    --font-size-h6:                  18px;
    --font-family-editor:            SF Mono, Avenir Next, sans-serif;
    --font-monospace:                SF Mono, Avenir Next, sans-serif;
    --font-family-preview:           SF Pro Display, Avenir Next, sans-serif;
}

.theme-light,
.theme-dark {
  --background-embed: #c799b61c;
  --background-embed-hover: hsl(324 20% 20% / 1);
  --background-primary: #07010a;
  --background-primary-alt: #44475a;
  --background-secondary: #44475a;
  --background-secondary-alt: #000000;
  --background-accent: #f8f8f2;
  --background-modifier-border: #6fd498;
  --background-modifier-form-field: rgba(0, 0, 0, 0.2);
  --background-modifier-form-field-highlighted: rgba(0, 0, 0, 0.5);
  --background-modifier-box-shadow: rgba(0, 0, 0, 0.3);
  --background-modifier-success: #50fa7b;
  --background-modifier-error: #3d0000;
  --background-modifier-error-rgb: 61, 0, 0;
  --background-modifier-error-hover: #470000;
  --background-modifier-cover: rgba(0, 0, 0, 0.6);
  --text-accent: #6fd498;
  --text-accent-hover: #8be9fd;
  --text-normal: #E3D3C4;
  --text-muted: #f8f8f2;
  --text-faint: #a57f97;
  --text-highlight-bg: #2e5a40;
  --text-error: #ff79c6;
  --text-error-hover: #ff79c6;
  --text-selection: #6272a4;
  --text-on-accent: #bd93f9;
  --interactive-normal: #ffb86c;
  --interactive-hover: #ff5555;
  --interactive-accent: #244632;
  --interactive-accent-rgb: 123, 108, 217;
  --interactive-accent-hover: #ff5555;
  --scrollbar-active-thumb-bg: #282a36;
  --scrollbar-bg: #282a36;
  --scrollbar-thumb-bg: #282a36;
  --text-title: #d297bc;
  --inline-code: #bd93f9;
  --code-block: #8be9fd;
  --pre-code: #121b15;
  --blockquote-border: #6fd498;
  --vim-cursor: #ff5555;
  --border-color: #2b2727;
}

/*-------------------------------------*/
/*      Search the following lines     */
/*     to jump to specific section     */
/*-------------------------------------*/
/*  resize-handle and borders          */
/*                tags               */
/*             link              */
/*                Cursor               */
/* basic format in EDITOR and PREVIEW */
/* Headings - EDITOR and PREVIEW */
/*         Code block in  Preview      */
/*       Code block in Editor          */
/*              Brackets               */
/*             Blockquote              */
/*             table                   */
/*               Checkbox              */
/*           html in editor            */
/*              popover                */
/*            Side panel               */
/* internal embedded link in preview   */
/*             graph view              */
/*            settings                 */
/*            Hide side bar            */
/*           width of content          */
/*  note header bar for non-andy mode */
/* andy mode activated in light mode  */
/*    at a rule line before ul list    *
/*  Hide Scrollbar (recommend for mac)  */
/*-------------------------------------*/

/***************************************/
/*  resize-handle and borders          */
/***************************************/

/*vertical resize-handle*/
.workspace-split.mod-vertical > * > .workspace-leaf-resize-handle,
.workspace-split.mod-left-split > .workspace-leaf-resize-handle,
.workspace-split.mod-right-split > .workspace-leaf-resize-handle{
  width: 1px !important;
  background-color: var(--border-color);
}

/*horizontal resize-handle*/
.workspace-split.mod-horizontal > * > .workspace-leaf-resize-handle{
  height: 1px !important;
  background-color: var(--border-color);
}

/*workspace ribbon when collapsed*/
.workspace-ribbon.is-collapsed {
  background-color: var(--background-primary-alt);
}

/*the vertical split*/
.workspace-split.mod-root .workspace-split.mod-vertical .workspace-leaf-content,
.workspace-split.mod-vertical > .workspace-split,
.workspace-split.mod-vertical > .workspace-leaf,
.workspace-tabs{
  padding-right: 0px;
}

/*status-bar*/
.status-bar{
  font-size: var(--font-size-status-bar);
  background-color: var(--background-secondary-alt);
  border-top: 0px;
}

.document-search-container{
  border-top: 0px;
  border-right: 0px;
  z-index: inherit;
}

.workspace-ribbon.mod-left.is-collapsed{
  border-right: 1px solid var(--border-color);
}

.workspace-ribbon.mod-right.is-collapsed{
  border-left: 1px solid var(--border-color);
}

/*************************************/
/*                tags               */
/*************************************/

/* Tag hover in preview */
a.tag:hover {
  color: var(--text-accent) !important;
}

/* Tag Color in editor and preview*/
.cm-hashtag, a.tag {
  color: var(--text-accent-hover) !important;
  text-decoration: none !important;
  font-style: normal !important;
}

/* ====== Tag Pills ======== */
.tag:not(.token) {
	background-color: var(--background-secondary);
	border: none;
	color: white;
	font-size: 11px;
	padding: 1px 8px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	margin: 0px 0px;
	cursor: pointer;
	border-radius: 8px;
    line-height: 2.2em;
    vertical-align: middle;
}
.tag:not(.token):hover {
	color: white;
	background-color: var(--text-accent-hover);
}
.tag[href^="#obsidian"] {
	background-color: #4d3ca6;
}
.tag[href^="#important"] {
	background-color: red;
}
.tag[href^="#complete"] {
	background-color: green;
}
.tag[href^="#inprogress"] {
	background-color: orange;
}
/* ... */

